# memupdate

./: .gitignore  .gitmodules  CLAUDE.md  CORRECTED_ARCHITECTURE.md  README.md  annotated_workflow.md  apply_data_fix.py  check_data_format.py  custom_dataset.py  ensure_registration.py  examine_parquet.py  fix_data_format.py  fix_rl_dataset.py  mylog0.ansi  mylog1.ansi  patch_reward_loading.py  patch_verl_dataset.py  progress_log.md  pyproject.toml  regenerate_data.py  repo_design_improved.md  run_simple_training.py  run_training.sh  run_training_container.sh  run_training_patched.sh  run_training_simple.sh  start_docker_with_init.sh  validate_config.py  verify_final_format.py
configs/: locomo_memory_grpo.yaml  simple_memory_grpo.yaml
configs/tool_config/: memory_tools.yaml
data/embedding_cache/: precompute_embeddings_fixed.py  qwen_embeddings_fallback.py
memupdate/agents/: __init__.py  memory_agent.py
memupdate/data/: precompute_embeddings.py  preprocess_locomo.py
memupdate/rewards/: memory_reward.py
memupdate/tools/: __init__.py  base_memory_tool.py  cached_embeddings.py  delete_memory.py  manage_memory.py  merge_memory.py  sample_memory.py  search_memory.py  split_memory.py
verl/experimental/agent_loop/: agent_loop.py  tool_agent_loop.py  tool_parser.py
verl/trainer/: main_ppo.py
verl/trainer/ppo/: metric_utils.py  ray_trainer.py
