[project]
name = "memupdate"
version = "0.1.0"
description = "Self-Refining Memory via Reinforcement Learning for LLM Agents"
authors = [
    {name = "MemUpdate Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    # Core RL framework
    "verl",
    # Memory management
    "langmem",
    # Data processing
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "datasets>=2.0.0",
    # ML/AI
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    # Utilities
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "flash-attn>=2.8.3",
    "sglang>=0.5.1.post3",
    "pybase64>=1.4.2",
    "pyzmq>=27.0.2",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "aiohttp>=3.12.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["memupdate*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
